--- a/investment_challenge.ipynb
+++ b/investment_challenge.ipynb
@@ -3367,7 +3367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3e8421a",
+   "id": "79a90f8d",
    "metadata": {},
    "source": [
     "The next step is to visualize the correlation plot that shows the dependence of the various features with the dependent variable. The correlation plot is displayed as a heat map as shown below"
@@ -3376,7 +3376,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "80af9d43",
+   "id": "55c6280a",
    "metadata": {},
    "outputs": [
     {
@@ -3413,7 +3413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81da8724",
+   "id": "6fbf9493",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify\">\n",
@@ -4876,7 +4876,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e66991",
+   "id": "11449b56",
    "metadata": {},
    "source": [
     "Thus, above are the predicted home values for each zip code for the year 2017, using independent variables from 2016"
@@ -5579,10 +5579,10 @@
     }
    },
    "cell_type": "markdown",
-   "id": "fd5c5c7a",
+   "id": "ac997f79",
    "metadata": {},
    "source": [
-    "## This map is a screenshot of the above map that was supposed to be displayed, just in case the map is not displayed. (The map disappears when uploaded on github due to security mechanisms in place\n",
+    "## This map below is a screenshot of the above map that was supposed to be displayed, just in case the map is not displayed. (The map disappears when uploaded on github due to security mechanisms in place)\n",
     "![map2.jpg](attachment:map2.jpg)"
    ]
   },
@@ -5782,10 +5782,10 @@
     }
    },
    "cell_type": "markdown",
-   "id": "186e1f43",
+   "id": "983ca558",
    "metadata": {},
    "source": [
-    "## This map is a screenshot of the above map that was supposed to be displayed, just in case the map is not displayed. (The map disappears when uploaded on github due to security mechanisms in place\n",
+    "## This map below is a screenshot of the above map that was supposed to be displayed, just in case the map is not displayed. (The map disappears when uploaded on github due to security mechanisms in place)\n",
     "![map1.jpg](attachment:map1.jpg)"
    ]
   },
@@ -7050,7 +7050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36069b4",
+   "id": "0f3e06f2",
    "metadata": {},
    "source": [
     "Visualize the various features/independent variables for these zipcodes that are close by. "
@@ -7222,7 +7222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d6878c",
+   "id": "c367427d",
    "metadata": {},
    "source": [
     "Here are a few of the thoughts that would come to my mind for future improvements. The thoughts below are only a subset of thoughts, there could be many more, given a larger timeframe."
